kubernetes/apps/apps/n8n/n8n/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n
